--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -27,7 +27,7 @@ body{
       }
 }
 section {
-
+@include padding(null null 5rem null);
     ul {
         list-style: disc outside none;
 
